# SmartInv_Common

./: .gitignore  LICENSE.md  README.md  pyproject.toml
infra/: analytics.yml  app.yml
infra/cloud-init/: smartinv-master.yml  smartinv-node01.yml  smartinv-node02.yml  smartinv-node03.yml
infra/config/influxdb/: influxdb.conf
infra/config/nginx/: default.conf
infra/config/prometheus/: prometheus.yml
infra/k8s/: couchdb.yml  database_bo.yml  database_inv.yml  docker-registry.yml  namespace.yml  nginx.yml  python_bo.yml  python_bo_bck.yml  python_inv.yml  python_inv_bck.yml  rabbitmq.yml  redis_bo.yml  redis_inv.yml  traefik.yml  vue_bo.yml  vue_inv.yml
infra/k8s/analytic/: grafana.yml  influxdb.yml  namespace.yml  prometheus.yml  telegraf.yml
infra/k8s/configmap/: influxdb.yml  prometheus.yml  rabbitmq.yml  telegraf.yml
infra/k8s/secrets/: bo-config.yml  bo_psql.yml  couchdb.yml  influxdb.yml  inv-config.yml  inv_psql.yml  rabbit_mq.yml  simulation.yml  telegraf.yml
infra/k8s/smartinv/: couchdb.yml  rabbitmq.yml  simulation.yml
infra/k8s/storage/: kustomization.yaml  patch_nfs_details.yml
infra/k8s/users/: access_dashboard.txt  dashboard-user.yml
src/smartInventory_common/communication/: __init__.py  couchdb.py  rabbit_mq.py  requests.py
src/smartInventory_common/interfaces/: LoRaPayload.py  __init__.py
src/smartInventory_common/iot_requests/: Reset.py  __init__.py
src/smartInventory_common/management/: __init__.py
src/smartInventory_common/models/: job.py
src/smartInventory_common/utils/: __init__.py  logger.py
(+54 files in other folders)
