[build-system]
requires = ["setuptools>=61.0", "pika>=1.3.0", "django-rest-framework>=0.1.0", "django>=4", "requests>=2.28", "pika>=1.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartInventory_common"
version = "0.0.1.dev12"
authors = [
    { name="Baptiste PELLARIN", email="b.pellarin@uniandes.edu.co" },
    { name="Eloi BERNARD", email="e.bernard@uniandes.edu.co" },
]
description = "Common library for SmartInventory System"
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bat553/SmartInv_Common"
"Bug Tracker" = "https://github.com/bat553/SmartInv_Common/issues"